Fix header alignment

--- a/client/app/styles/index.css
+++ b/client/app/styles/index.css
@@ -128,15 +128,21 @@ body {
     width: 650px;
 }
 
-.job-detail .banner .row .address h2 {
+.job-detail .banner .row .address {
+    position: relative;
+}
+
+.job-detail .banner .row .address .address-container {
+    font-size: 2em;
+    display: inline-block;
+    padding-left: 10px;
+    top: 50%;
+    transform: translateY(-50%);
     position: absolute;
-    bottom: 0;
-    left: 0;
 }
 
 .job-detail .banner .row .image {
     top: 50%;
-    height: 100px;
     margin-top: -50px;
 }
 
